ARM: dts: imx6ul-panzer: add cma buffer

--- a/arch/arm/boot/dts/imx6ul-panzer.dts
+++ b/arch/arm/boot/dts/imx6ul-panzer.dts
@@ -17,6 +17,19 @@
 		reg = <0x80000000 0x10000000>;
 	};
 
+	reserved-memory {
+		#address-cells = <1>;
+		#size-cells = <1>;
+		ranges;
+
+		linux,cma {
+			compatible = "shared-dma-pool";
+			reusable;
+			size = <0xa000000>;
+			linux,cma-default;
+		};
+	};
+
 	reg_sd1_vmmc: regulator-sd1-vmmc {
 		compatible = "regulator-fixed";
 		regulator-name = "VSD_3V3";
