--- a/arch/arm/boot/dts/imx6ul-panzer.dts
+++ b/arch/arm/boot/dts/imx6ul-panzer.dts
@@ -164,11 +164,27 @@
 	status = "okay";
 };
 
-&i2c1 {
-	clock-frequency = <100000>;
+&gpio1 {
 	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_i2c1>;
-	status = "okay";
+	pinctrl-0 = <&pinctrl_gpio1>;
+
+	gpio-line-names =	\
+		"", "GPIO_IN1", "GPIO_OUT1", "GPIO_IN2", "GPIO_OUT2", "", "", "",	\
+		"", "", "", "", "", "", "", "",	\
+		"", "", "", "", "", "", "", "",	\
+		"", "", "", "", "", "", "", "";
+
+	gpio_in1 {
+		gpio-hog;
+		gpios = <1 GPIO_ACTIVE_HIGH>;
+		input;
+	};
+
+	gpio_in2 {
+		gpio-hog;
+		gpios = <3 GPIO_ACTIVE_HIGH>;
+		input;
+	};
 };
 
 &lcdif {
@@ -327,15 +343,15 @@
 	pinctrl_enet1: enet1grp {
 		fsl,pins = <
 			MX6UL_PAD_GPIO1_IO07__ENET1_MDC         0x1b0b0
-                        MX6UL_PAD_GPIO1_IO06__ENET1_MDIO        0x1b0b0
-                        MX6UL_PAD_ENET1_RX_EN__ENET1_RX_EN      0x1b0b0
-                        MX6UL_PAD_ENET1_RX_ER__ENET1_RX_ER      0x1b0b0
-                        MX6UL_PAD_ENET1_RX_DATA0__ENET1_RDATA00 0x1b0b0
-                        MX6UL_PAD_ENET1_RX_DATA1__ENET1_RDATA01 0x1b0b0
-                        MX6UL_PAD_ENET1_TX_EN__ENET1_TX_EN      0x1b0b0
-                        MX6UL_PAD_ENET1_TX_DATA0__ENET1_TDATA00 0x1b0b0
-                        MX6UL_PAD_ENET1_TX_DATA1__ENET1_TDATA01 0x1b0b0
-                        MX6UL_PAD_ENET1_TX_CLK__ENET1_REF_CLK1  0x4001b031
+			MX6UL_PAD_GPIO1_IO06__ENET1_MDIO        0x1b0b0
+			MX6UL_PAD_ENET1_RX_EN__ENET1_RX_EN      0x1b0b0
+			MX6UL_PAD_ENET1_RX_ER__ENET1_RX_ER      0x1b0b0
+			MX6UL_PAD_ENET1_RX_DATA0__ENET1_RDATA00 0x1b0b0
+			MX6UL_PAD_ENET1_RX_DATA1__ENET1_RDATA01 0x1b0b0
+			MX6UL_PAD_ENET1_TX_EN__ENET1_TX_EN      0x1b0b0
+			MX6UL_PAD_ENET1_TX_DATA0__ENET1_TDATA00 0x1b0b0
+			MX6UL_PAD_ENET1_TX_DATA1__ENET1_TDATA01 0x1b0b0
+			MX6UL_PAD_ENET1_TX_CLK__ENET1_REF_CLK1  0x4001b031
 		>;
 	};
 
